; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c_ipmmu_find_root.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c_ipmmu_find_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.ipmmu_vmsa_device = type { i32 }

@ipmmu_driver = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@__ipmmu_check_device = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ipmmu_vmsa_device* ()* @ipmmu_find_root to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ipmmu_vmsa_device* @ipmmu_find_root() #0 {
  %1 = alloca %struct.ipmmu_vmsa_device*, align 8
  store %struct.ipmmu_vmsa_device* null, %struct.ipmmu_vmsa_device** %1, align 8
  %2 = load i32, i32* @__ipmmu_check_device, align 4
  %3 = call i64 @driver_for_each_device(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ipmmu_driver, i32 0, i32 0), i32* null, %struct.ipmmu_vmsa_device** %1, i32 %2)
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load %struct.ipmmu_vmsa_device*, %struct.ipmmu_vmsa_device** %1, align 8
  br label %8

7:                                                ; preds = %0
  br label %8

8:                                                ; preds = %7, %5
  %9 = phi %struct.ipmmu_vmsa_device* [ %6, %5 ], [ null, %7 ]
  ret %struct.ipmmu_vmsa_device* %9
}

declare dso_local i64 @driver_for_each_device(i32*, i32*, %struct.ipmmu_vmsa_device**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
